# AdventOfCode

./: .gitignore
2018/src/1/: Main1.go  input
2020/cpp/: CMakeLists.txt  README.md  dev.sh
2020/cpp/1/: app.cpp  input1.txt
2020/cpp/10/: app.cpp
2020/cpp/11/: app.cpp
2020/cpp/12/: app.cpp
2020/cpp/13/: app.cpp
2020/cpp/14/: app.cpp  input14.txt
2020/cpp/2/: app.cpp
2020/cpp/3/: app.cpp
2020/cpp/4/: app.cpp
2020/cpp/5/: app.cpp
2020/cpp/6/: app.cpp
2020/cpp/7/: app.cpp
2020/cpp/8/: .#input8.cpp  app.cpp
2020/cpp/9/: app.cpp
